# bevy_old_tv_shader

./: Cargo.toml  README.md
examples/: cube.rs  shapes.rs  text.rs
src/: lib.rs  old_tv.wgsl
