[package]
name = "bevy_old_tv_shader"
description = "An \"old TV\" effect based on the Bevy post-processing example."
authors = ["Denis Lavrentev"]
repository = "https://github.com/Defernus/bevy_old_tv_shader"
version = "0.3.0"
edition = "2021"
keywords = [
    "bevy",
    "gamedev",
    "shader",
]
categories = [
    "game-development"
]
readme = "README.md"
license = "MIT"

[dependencies]
bevy = { version = "^0.16", default-features = false, features = [ "bevy_pbr" ] }
bevy_ui = { version = "^0.16", optional = true }

[dev-dependencies]
bevy = { version = "^0.16" }

[features]
ui = ["dep:bevy_ui"]
